--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,5 +1,5 @@
 @import "variables";
-@import "./fonts";
+@import "fonts";
 body{margin: 0;width: 100%;overflow-x: hidden;background: #fff;font-family: "Open Sans";
 }
 
