--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -32,5 +32,6 @@ button.mint-button--primary{background: $main_green}
 .description img{max-width: 100%;max-height: 100%}
 .inner{padding: 15px 0 30px 0}
 
+.border-round{ border: 1px solid rgba(0,0,0,.125);border-radius: 0.25rem;}
 
 
